Correctly parse the whole file

--- a/ActualBudgetTransformer/TransformerConsoleApp/Properties/launchSettings.json
+++ b/ActualBudgetTransformer/TransformerConsoleApp/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "TransformerConsoleApp": {
       "commandName": "Project",
-      "commandLineArgs": "\"C:\\temp\\ing versimpeld.csv\" \"C:\\temp\\ing transformed.csv\""
+      "commandLineArgs": "\"C:\\temp\\ing origineel.csv\" \"C:\\temp\\ing transformed.csv\""
     }
   }
 }
